# Virtual-Banking-System-Prototype

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  object.py  package-lock.json  pyproject.toml  requirements.txt  sql_app.db  wait-for-it.sh
app/: main.py
app/api/: authenticator.py  dependencies.py  transaction.py  transfer.py  userAccountManagement.py
app/db/: bankdb.db  database.py  models.py  schema.py
app/templates/: add_admin.html  admin.html  currencyExchange.html  fakeATM.html  fakeATMConfirmation.html  fakeATMSuccess.html  home.html  homeAdmin.html  sidebar_header_admin.html  transaction.html  transfer.html  userprofile.html
data/: bankData.fs  bankData.fs.index  bankData.fs.tmp  bankdatabase.fs  bankdatabase.fs.index  bankdatabase.fs.tmp  bankdb.fs  bankdb.fs.tmp
db/: bankdb.db  crud.py  database.py  models.py  schema.py
static/css/: addAccount.css  admin.css  currencyExchange.css  currencyExchangeAdmin.css  header.css  home.css  homeAdmin.css  login.css  signup.css  transaction.css  transfer.css  transferReview.css  withdrawal.css  withdrawalOtp.css  withdrawalReview.css
static/js/: addAdmin.js  admin.js  currencyExchange.js  signup.js  transaction.js  (+4 more)
templates/: addAccount.html  add_admin.html  admin.html  currencyExchange.html  currencyExchangeAdmin.html  fakeATMConfirmation.html  home.html  homeAdmin.html  login.html  sidebar_header.html  sidebar_header_admin.html  signup.html  transaction.html  transfer.html  transferReview.html  userprofile.html  withdrawal.html  withdrawalOtp.html  withdrawalReview.html
(+10 files in other folders)
